[B]1.9.3[/B]
- fixed: Hungarian Genre

[B]1.9.2[/B]
- fixed: Original Title

[B]1.9.1[/B]
- fixed: mpaa rating won't scrape from IMDb

[B]1.9.0[/B]
- added: Language preference for Sets

[B]1.8.0[/B]
- added: Trailers from TMDb
- added: Language preference for Posters
- refactored: Settings and Set Title Scraping

[B]1.7.2[/B]
- fixed: dependency versioning

[B]1.7.1[/B]
- fixed: genres scraping due to IMDb layout changes

[B]1.7.0[/B]
- added: Set Title scraping from themoviedb.org

[B]1.6.2[/B]
- fixed: Originaltitle scraping

[B]1.6.1[/B]
- fixed: Originaltitle some time contains 'IMDb - ' string

[B]1.6.0[/B]
- added: Option to translate genres to Hungarian - Credits to peterk

[B]1.5.3[/B]
- fixed: IMDb won't get identified in some cases

[B]1.5.2[/B]
- fixed: IMDb rating after another site change

[B]1.5.1[/B]
- fixed: IMDb rating

[B]1.5.0[/B]
- re-added: Hungarian and Original title in the same title field (not recommended to use)

[B]1.4.3[/B]
- fixed: incorrectly scraped year under some circumtances

[B]1.4.2[/B]
- fixed: actor roles

[B]1.4.1[/B]
- fixed: won't scrape imdb details and artwork for some movies

[B]1.4.0[/B]
- added: fallback to imdb plot if no plot is available on port.hu

[B]1.3.6[/B]
- fixed: actor images

[B]1.3.5[/B]
Fixed: directors (sometimes wrong director got scraped)

[B]1.3.4[/B]
Fixed: Fixed title and year scraping due to site changes

[B]1.3.3[/B]
Fixed: actors scraping

[B]1.3.2[/B]
Fixed: year scraping

[B]1.3.1[/B]
Changed: remove scraping of mixed titles

[B]1.3.0[/B]
Cosmetics

[B]1.2.2[/B]
Changed: New search results structure for better auto-matching

[B]1.2.1[/B]
Added: Polish translations

[B]1.2.0[/B]
Changed: adapt new IMDb layout

[B]1.1.0[/B]
Fixed: originaltitle, make Hungarian the the default title language

[B]1.0.9[/B]
Fixed: year scraping

[B]1.0.8[/B]
Fixed: adapt IMDb changes

[B]1.0.7[/B]
Fixed: scraping directors from imdb when fullcast enabled

[B]1.0.6[/B]